Added charset meta tag. Linked files to main.css

--- a/about.html
+++ b/about.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="UTF-8">
+		<meta charset="UTF-8">
+		<title>Lorem Ipsum UF</title>
+		
+		<link rel="stylesheet" href="main.css">
+		<!--link rel="icon" type="image/x-icon" href="img/UF_icon.ico-->
 	</head>
 	<body>	 
 	</body>
