Klistrade in kod från mitt övningsprojekt

--- a/index.html
+++ b/index.html
@@ -8,6 +8,51 @@
 		<!--link rel="icon" type="image/x-icon" href="img/UF_icon.ico"-->
 	</head>
 	<body>
-    	<h1>Hej hallålololololool</h1>
+    	<div id="content">
+		<div id="menu">
+			<ul>
+				<li><a href="index.html">Hem</a></li>
+				<li><a href="about.html">Om oss</a></li>
+				<li><a href="contact.html">Kontakt</a></li>
+			</ul>
+		</div>
+		<!div class="hero-image">
+			<div class="hero-text">
+				<h1>Lorem Ipsum UF</h1>
+			</div>
+		</div>
+
+		<h2>Produkter</h2>
+		<ul>
+			<li><a href="#Gafflar">Gafflar</a></li>
+			<li><a href="#Knivar">Knivar</a></li>
+			<li><a href="#Skedar">Skedar</a></li>
+		</ul>
+		
+		<div class="product" id="gafflar">
+			<a name="Gafflar"/>
+			<h3>Gafflar</h3>
+			<!--img src="img/gaffel.jpg" alt="En gaffel" class="productImage"-->
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		
+		<div class="product" id="knivar">
+			<a name="Knivar"/>
+			<h3>Knivar</h3>
+			<!--img src="img/kniv.jpg" alt="En kniv" class="productImage"-->
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		
+		<div class="product" id="skedar">
+			<a name="Skedar"/>
+			<h3>Skedar</h3>
+			<!--img src="img/sked.jpg" alt="En sked" class="productImage"-->
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		
+		<footer>
+			<p>Lorem Ipsum UF | 2018</p>
+		</footer>
+		</div>
 	</body>
 </html>
