--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,61 @@
 		<link rel="stylesheet" href="main.css">
 		<!--link rel="icon" type="image/x-icon" href="img/UF_icon.ico"-->
 	</head>
-	<body>	 
+	<body>
+		<h1>Kontakt</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		
+		<div id="menu">
+			<ul>
+				<li><a href="index.html">Hem</a></li>
+				<li><a href="about.html">Om oss</a></li>
+				<li><a href="contact.html">Kontakt</a></li>
+			</ul>
+		</div>
+		
+		<form style="margin-top: 25px;">
+			<table>
+				<thead>
+				<h3>Frågor? Hör av dig!</h3>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							<p title="För att vi ska kunna kontakta dig">Din mailadress:</p>
+						</td>
+						<td>
+							<input type="email">
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<p>Ämne:</p>
+						</td>
+						<td>
+							<input type="text">
+						</td>
+					</tr>
+					<tr>
+						<td style="vertical-align: top;">
+							<p>Meddelande:</p>
+						</td>
+						<td>
+							<textarea rows="10"></textarea>
+						</td>
+					</tr>
+					<tr>
+						<td>
+						</td>
+						<td>
+							<input type="submit">
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</form>
+		
+		<footer>
+			<p>Lorem Ipsum UF | 2018</p>
+		</footer>
 	</body>
 </html>
