Changed a bunch of names

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Lorem Ipsum UF</title>
+		<title>Kontakt | Barably </title>
 		
 		<link rel="stylesheet" href="main.css">
 		<!--link rel="icon" type="image/x-icon" href="img/UF_icon.ico"-->
@@ -14,7 +14,7 @@
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">Hem</a></li>
-				<li><a href="about.html">Om oss</a></li>
+				<li><a href="about.html">Om Barably</a></li>
 				<li><a href="contact.html">Kontakt</a></li>
 			</ul>
 		</div>
@@ -61,7 +61,7 @@
 		</form>
 		
 		<footer>
-			<p>Lorem Ipsum UF | 2018</p>
+			<p>Barably | 2018</p>
 		</footer>
 	</body>
 </html>
