--- a/index.html
+++ b/index.html
@@ -2,31 +2,31 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Lorem Ipsum UF</title>
+		<title>Barably UF</title>
 		
 		<link rel="stylesheet" href="main.css">
-		<!--link rel="icon" type="image/x-icon" href="img/UF_icon.ico"-->
+		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
 	<body>
     	<div id="content">
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">Hem</a></li>
-				<li><a href="about.html">Om oss</a></li>
+				<li><a href="about.html">Om Barably</a></li>
 				<li><a href="contact.html">Kontakt</a></li>
 			</ul>
 		</div>
-		<!div class="hero-image">
+		<div class="hero-image">
 			<div class="hero-text">
-				<h1>Lorem Ipsum UF</h1>
+				<h1>Barably UF</h1>
 			</div>
 		</div>
 
-		<h2>Produkter</h2>
+		<h2>Våra Paraplyer</h2>
 		<ul>
-			<li><a href="#Gafflar">Gafflar</a></li>
+			<!--li><a href="#Gafflar">Gafflar</a></li>
 			<li><a href="#Knivar">Knivar</a></li>
-			<li><a href="#Skedar">Skedar</a></li>
+			<li><a href="#Skedar">Skedar</a></li-->
 		</ul>
 		
 		<div class="product" id="gafflar">
@@ -51,7 +51,7 @@
 		</div>
 		
 		<footer>
-			<p>Lorem Ipsum UF | 2018</p>
+			<p>Barably UF | 2018</p>
 		</footer>
 		</div>
 	</body>
