--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Lorem Ipsum UF</title>
+		<title>Om Barably UF | Barably UF</title>
 		
 		<link rel="stylesheet" href="main.css">
 		<!--link rel="icon" type="image/x-icon" href="img/UF_icon.ico-->
@@ -14,13 +14,13 @@
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">Hem</a></li>
-				<li><a href="about.html">Om oss</a></li>
+				<li><a href="about.html">Om Barably</a></li>
 				<li><a href="contact.html">Kontakt</a></li>
 			</ul>
 		</div>
 		
 		<footer>
-			<p>Lorem Ipsum UF | 2018</p>
+			<p>Barably UF | 2018</p>
 		</footer>
 	</body>
 </html>
