--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     	<div id="content">
 		<div id="menu">
 			<ul>
-				<li><a href="index.html">Hem</a></li>
-				<li><a href="about.html">Om Barably</a></li>
-				<li><a href="contact.html">Kontakt</a></li>
+				<li><a href="index.html">HEM</a></li>
+				<li><a href="about.html">OM OSS</a></li>
+				<li><a href="contact.html">KONTAKT</a></li>
 			</ul>
 		</div>
 		<div class="hero-image">
