--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 		</div>
 
 		<h2>Våra Paraplyer</h2>
-		<ul>
-			<!--li><a href="#Gafflar">Gafflar</a></li>
+		<!--ul>
+			<li><a href="#Gafflar">Gafflar</a></li>
 			<li><a href="#Knivar">Knivar</a></li>
-			<li><a href="#Skedar">Skedar</a></li-->
-		</ul>
+			<li><a href="#Skedar">Skedar</a></li>
+		</ul-->
 		
 		<div class="product" id="gafflar">
 			<a name="Gafflar"/>
