--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="main.css">
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
-	<body>
+	<body><h1>Barably UF</h1>
     	<div id="content">
 		<div id="menu">
 			<ul>
@@ -18,7 +18,7 @@
 		</div>
 		<div class="hero-image">
 			<div class="hero-text">
-				<h1>Barably UF</h1>
+				
 			</div>
 		</div>
 
