Started work on 'OM OSS' page

--- a/about.html
+++ b/about.html
@@ -17,8 +17,16 @@
 		</div>
 		
 		<h1>Om oss</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		
+		<div id="owners">
+			<h2>Ägare</h2>
+			<ul>
+				<li><img id="LF" src="img/temp.jpg" alt="Lukas Fransson" style="width:200px;height:200px;"><p>Lukas Fransson</p></li>
+				<li><img id="MK" src="img/temp.jpg" alt="Martin Kaup" style="width:200px;height:200px;"><p>Martin Kaup</p></li>
+			</ul>	
+		</div>
+
+		<p id="companyInformation">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		
 		<footer>
 			<p>Barably UF | 2018</p>
