--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" href="main.css">
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
-	<body><h1>Barably UF</h1>
+	<body>
+	<h1>Barably UF</h1>
     	<div id="content">
 		<div id="menu">
 			<ul>
