--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
 		<link rel="stylesheet" href="main.css">
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
-	<body>
-	<h1>Barably UF</h1>
+<body>
+
+    <div id="header">   
+    <header>
+    <img src="img/barably.png" width="175" height="175">
+    </header>
+    </div>
+    
+    <div id="headertvå">
+    <header>
+    <h1>Barably UF</h1> 
+    </header>
+    </div>
+
     	<div id="content">
-		
 		<div id="menu">
+
 			<ul>
 				<li><a href="index.html">HEM</a></li>
 				<li><a href="about.html">OM OSS</a></li>
@@ -22,7 +34,7 @@
 		<div class="hero-image">
 			<div class="hero-text">
 				
-			</div>
+		  </div>
 		</div>
 
 		<h2>Våra Paraplyer</h2>
@@ -56,6 +68,6 @@
 		<footer>
 			<p>Barably UF | 2018</p>
 		</footer>
-		</div>
+</div>
 	</body>
 </html>
