--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 		<title>Kontakt | Barably </title>
 		
 		<link rel="stylesheet" href="main.css">
-		<!--link rel="icon" type="image/x-icon" href="img/UF_icon.ico"-->
+		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
 	<body>
 		<div id="menu">
