--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
 	<body>
+		<!--Top menu-->
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">HEM</a></li>
@@ -16,6 +17,7 @@
 			</ul>
 		</div>
 		
+		<!--Main content-->
 		<h1>Om oss</h1>
 		
 		<div id="owners">
