--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
 			<a name="Gafflar"/>
 			<h3>Bob</h3>
 			<!--img src="img/gaffel.jpg" alt="En gaffel" class="productImage"-->
-			<p>Vårt första och ända paraply Vårt första och ända paraplyVårt första och ända paraplyVårt första o ch ända paraplyV årt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända par a plyVå rt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraVårt första och ända paraplyVårt första och ända gärna hej hej paraplyVårt första och ända paraplyVårt första och ända paraply.</p>
+			<p>Vårt första och ända paraply Vårt första och ända paraplyVårt första och ända paraplyVårtårt första och ända par a plyVå rt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraVårt första och ända paraplyVårt första och ända gärna araplyVårt första och ända paraplyVårt första och ända paraply.</p>
 		</div>
 		
 		<div class="product" id="knivar">
 			<a name="Knivar"/>
 			<h3>Rob</h3>
 			<!--img src="img/kniv.jpg" alt="En kniv" class="productImage"-->
-			<p>inget. Vårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända parplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraply</p>
+			<p>inget. Vårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första ochoch ända paraplyVårt första och ända paraplyVårt första och ända paraply</p>
 		</div>
 		
 		<div class="product" id="skedar">
 			<a name="Skedar"/>
 			<h3>Todd</h3>
 			<!--img src="img/sked.jpg" alt="En sked" class="productImage"-->
-			<p>finns. Vårt första och ända paraplyVårt första och ända paraply. Vårt första och ända paraplyVårt första och ända asså panikens mamma. Årt första och ända pa raplyVårt första och ända paraply Vårt första och ända paraplyVårt första och ända pa...raply</p>
+			<p>finns. Vårt första och panikens mamma. Årt första och ända pa raplyVårt första och ända paraply Vårt första och ända paraplyVårt första och ända pa...raply</p>
 		</div>
 		</div>
         
