Small CSS changes

--- a/index.html
+++ b/index.html
@@ -7,22 +7,14 @@
 		<link rel="stylesheet" href="main.css">
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
-    <hr/>
     <body>
 
     <div class="container">
-    <div id="header">   
-    <header>
-    <img src="img/barably.png" width="175" height="175">
+    <header id="header">
+    <img src="img/barably.png" style="width: 175px; height: 175px;">
+	<h1>Barably UF</h1>
     </header>
-    </div>
-    
-    <div id="headertvå">
-    <header>
-    <h1>Barably UF</h1> 
-    </header>
-    </div>
-
+ 
     	<div id="content">
 		<div id="menu">
 
@@ -68,16 +60,15 @@
 		</div>
 		</div>
         
-       <br/>  
-	   <footer>
-       <hr/>
-	   <p>
-        Barably UF | 2018
-       </p>
-       <p>
-       Instagram: @Barably UF	|	Mail: någonting.hej@gmail.com
-       </p>
-      </footer>   
-     </div>   
+		<footer>
+		<!--hr/-->
+		<p>
+			Barably UF | 2018
+		</p>
+		´<p>
+			Instagram: @Barably UF	|	Mail: example@mail.com
+		</p>
+		</footer>   
+		</div>   
 	</body>
-   </html>
+</html>
