--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,7 @@
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
 	<body>
-		<!--Top menu-->
-		<div id="menu">
+		<div id="menutvå">
 			<ul>
 				<li><a href="index.html">HEM</a></li>
 				<li><a href="about.html">OM OSS</a></li>
