Small fixes and touchups

--- a/index.html
+++ b/index.html
@@ -31,43 +31,42 @@
 		  </div>
 		</div>
 
-		<h2>Våra Paraplyer</h2>
+		<h2>Våra paraplyer</h2>
 		<!--ul>
-			<li><a href="#Gafflar">Gafflar</a></li>
-			<li><a href="#Knivar">Knivar</a></li>
-			<li><a href="#Skedar">Skedar</a></li>
+			<li><a href="#Bob">Bob</a></li>
+			<li><a href="#Rob">Rob</a></li>
+			<li><a href="#todd">todd</a></li>
 		</ul-->
 		
-		<div class="product" id="gafflar">
-			<a name="Gafflar"/>
+		<div class="product" id="Bob">
+			<a name="Bob"/>
 			<h3>Bob</h3>
 			<!--img src="img/gaffel.jpg" alt="En gaffel" class="productImage"-->
-			<p>Vårt första och ända paraply Vårt första och ända paraplyVårt första och ända paraplyVårtårt första och ända par a plyVå rt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraVårt första och ända paraplyVårt första och ända gärna araplyVårt första och ända paraplyVårt första och ända paraply.</p>
+			<p>Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply.</p>
 		</div>
 		
-		<div class="product" id="knivar">
-			<a name="Knivar"/>
+		<div class="product" id="Rob">
+			<a name="Rob"/>
 			<h3>Rob</h3>
 			<!--img src="img/kniv.jpg" alt="En kniv" class="productImage"-->
-			<p>inget. Vårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första ochoch ända paraplyVårt första och ända paraplyVårt första och ända paraply</p>
+			<p>Plats för framtida produkter. För närvarande inget. Vårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första ochoch ända paraplyVårt första och ända paraplyVårt första och ända paraply</p>
 		</div>
 		
-		<div class="product" id="skedar">
-			<a name="Skedar"/>
+		<div class="product" id="todd">
+			<a name="todd"/>
 			<h3>Todd</h3>
 			<!--img src="img/sked.jpg" alt="En sked" class="productImage"-->
-			<p>finns. Vårt första och panikens mamma. Årt första och ända pa raplyVårt första och ända paraply Vårt första och ända paraplyVårt första och ända pa...raply</p>
+			<p>Plats för framtida produkter. För närvarande inget. Vårt första och panikens mamma. Årt första och ända pa raplyVårt första och ända paraply Vårt första och ända paraplyVårt första och ända pa...raply</p>
 		</div>
 		</div>
         
 		<footer>
-		<!--hr/-->
-		<p>
+			<p>
 			Barably UF | 2018
-		</p>
-		´<p>
+			</p>
+			<p>
 			Instagram: @Barably UF	|	Mail: example@mail.com
-		</p>
+			</p>
 		</footer>   
 		</div>   
 	</body>
