--- a/about.html
+++ b/about.html
@@ -8,6 +8,10 @@
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
 	<body>
+		<header id="header">
+		<img src="img/barably.png" style="width: 175px; height: 175px;">
+		<h1>Barably UF</h1>
+		</header>
 		<!--Top menu-->
 		<div id="menu">
 			<ul>
@@ -19,19 +23,19 @@
 		
 		<!--Main content-->
 		<h1>Om oss</h1>
-		
-		<div id="owners">
+			<p>Vi är ett UF-företag i Eskilstuna som strävar efter att erbjuda våra kunder paraplyer som håller en bra kvalitet och design.</p>
+			<div id="owners">
 			<h2>Ägare</h2>
 			<ul>
-				<li><img id="LF" src="img/temp.jpg" alt="Lukas Fransson" style="width:200px;height:200px;"><p>Lukas Fransson</p></li>
-				<li><img id="MK" src="img/temp.jpg" alt="Martin Kaup" style="width:200px;height:200px;"><p>Martin Kaup</p></li>
+				<li><h3>Lukas Fransson</h3><img id="LF" src="img/temp.jpg" alt="Lukas Fransson" style="width:200px;height:200px;"></li>
+				<li><h3>Martin Kaup</h3><img id="MK" src="img/temp.jpg" alt="Martin Kaup" style="width:200px;height:200px;"></li>
 			</ul>	
 		</div>
-
-		<p>Vi är ett UF-företag som vill ge folk paraplyer med bra kvalitet och standard.</p>
-		
 		<footer>
 			<p>Barably UF | 2018</p>
+			<p>
+			Instagram: @Barably UF	|	Mail: example@mail.com
+			</p>
 		</footer>
 	</body>
 </html>
