--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,11 @@
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
 	<body>
-		<div id="menutvå">
+		<header id="header">
+		<img src="img/barably.png" style="width: 175px; height: 175px;">
+		<h1>Barably UF</h1>
+		</header>
+		<div id="menu">
 			<ul>
 				<li><a href="index.html">HEM</a></li>
 				<li><a href="about.html">OM OSS</a></li>
@@ -18,7 +22,7 @@
 		
 		<!--Main content-->
 		<h1>Kontakt</h1>
-		<p>Kontakta oss med våra konteakter.</p>
+		<p>Här hittar du vårt kontaktformulär för att kontakta oss angående våra produkter eller företaget. Det är det enklaste sättet att få kontakt med oss, och vi svarar så fort vi kan.</p>
 		
 		<!--Contact form-->
 		<form style="margin-top: 25px;">
