Started fixing owners portraits

--- a/about.html
+++ b/about.html
@@ -23,14 +23,34 @@
 		
 		<!--Main content-->
 		<h1>Om oss</h1>
-			<p>Vi är ett UF-företag i Eskilstuna som strävar efter att erbjuda våra kunder paraplyer som håller en bra kvalitet och design.</p>
-			<div id="owners">
-			<h2>Ägare</h2>
+		<p>Vi är ett UF-företag i Eskilstuna som strävar efter att erbjuda våra kunder paraplyer som håller en bra kvalitet och design.</p>
+		<div id="owners">
+
+			<!--h3>Lukas Fransson</h3>
+			<h3>Martin Kaup</h3>
 			<ul>
-				<li><h3>Lukas Fransson</h3><img id="LF" src="img/temp.jpg" alt="Lukas Fransson" style="width:200px;height:200px;"></li>
-				<li><h3>Martin Kaup</h3><img id="MK" src="img/temp.jpg" alt="Martin Kaup" style="width:200px;height:200px;"></li>
-			</ul>	
-		</div>
+				<li><img id="LF" src="img/temp.jpg" alt="Lukas Fransson" style="width:200px;height:200px;"></li>
+				<li><img id="MK" src="img/temp.jpg" alt="Martin Kaup" style="width:200px;height:200px;"></li>
+			</ul-->
+			<table>
+				<thead>
+					<h2>Ägare</h2>
+				</thead>
+				<tr>
+					<td>
+						<img id="LF" src="img/temp.jpg" alt="Lukas Fransson" style="width:200px;height:200px;">
+					</td>
+					<td>
+						<img id="MK" src="img/temp.jpg" alt="Martin Kaup" style="width:200px;height:200px;">
+					</td>
+				</tr>
+				<tr>
+					<td>
+					</td>
+					<td>
+					</td>
+				</tr>
+			</div>
 		<footer>
 			<p>Barably UF | 2018</p>
 			<p>
