--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8">
 		<title>Barably UF</title>
 		
+        
+        <hr>
+        
 		<link rel="stylesheet" href="main.css">
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
@@ -40,21 +43,21 @@
 		
 		<div class="product" id="Bob">
 			<a name="Bob"/>
-			<h3>Bob</h3>
+			<h3>Information</h3>
 			<!--img src="img/gaffel.jpg" alt="En gaffel" class="productImage"-->
 			<p>Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply. Vårt första och enda paraply.</p>
 		</div>
 		
 		<div class="product" id="Rob">
 			<a name="Rob"/>
-			<h3>Rob</h3>
+			<h3>Tillverkning</h3>
 			<!--img src="img/kniv.jpg" alt="En kniv" class="productImage"-->
 			<p>Plats för framtida produkter. För närvarande inget. Vårt första och ända paraplyVårt första och ända paraplyVårt första och ända paraplyVårt första ochoch ända paraplyVårt första och ända paraplyVårt första och ända paraply</p>
 		</div>
 		
 		<div class="product" id="todd">
 			<a name="todd"/>
-			<h3>Todd</h3>
+			<h3>Materialet</h3>
 			<!--img src="img/sked.jpg" alt="En sked" class="productImage"-->
 			<p>Plats för framtida produkter. För närvarande inget. Vårt första och panikens mamma. Årt första och ända pa raplyVårt första och ända paraply Vårt första och ända paraplyVårt första och ända pa...raply</p>
 		</div>
@@ -65,7 +68,7 @@
 			Barably UF | 2018
 			</p>
 			<p>
-			Instagram: @Barably UF	|	Mail: example@mail.com
+			Instagram: @primaparaplyer_uf	|	Mail: martin.kaup47@gmail.com
 			</p>
 		</footer>   
 		</div>   
