--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Om Barably UF | Barably UF</title>
-		
+		<hr>
 		<link rel="stylesheet" href="main.css">
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
@@ -23,7 +23,7 @@
 		
 		<!--Main content-->
 		<h1>Om oss</h1>
-		<p>Vi är ett UF-företag i Eskilstuna som strävar efter att erbjuda våra kunder paraplyer som håller en bra kvalitet och design.</p>
+		<p>Vi är ett UF-företag i Eskilstuna som säljer paraplyer.</p>
 		<div id="owners">
 
 			<!--h3>Lukas Fransson</h3>
@@ -54,8 +54,8 @@
 		<footer>
 			<p>Barably UF | 2018</p>
 			<p>
-			Instagram: @Barably UF	|	Mail: example@mail.com
-			</p>
-		</footer>
+			Instagram: @primaparaplyer_uf	|	Mail: martin.kaup47@gmail.com
+			</p>		
+            </footer>
 	</body>
 </html>
