--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Kontakt | Barably </title>
+        
 		
 		<link rel="stylesheet" href="main.css">
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
@@ -11,7 +12,9 @@
 		<header id="header">
 		<img src="img/barably.png" style="width: 175px; height: 175px;">
 		<h1>Barably UF</h1>
+        
 		</header>
+        <hr>
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">HEM</a></li>
@@ -68,6 +71,9 @@
 		
 		<footer>
 			<p>Barably UF | 2018</p>
+            			<p>
+			Instagram: @primaparaplyer_uf	|	Mail: martin.kaup47@gmail.com
+			</p>
 		</footer>
 	</body>
 </html>
