Small fixing and cleanup
Near production-ready

--- a/about.html
+++ b/about.html
@@ -2,17 +2,17 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Om Barably UF | Barably UF</title>
+		<title>Om Prima Paraplyer UF | Prima Paraplyer</title>
 		<hr>
 		<link rel="stylesheet" href="main.css">
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
 	<body>
 		<header id="header">
-		<img src="img/barably.png" style="width: 175px; height: 175px;">
-		<h1>Barably UF</h1>
+			<img src="img/barably.png" style="width: 175px; height: 175px;">
+			<h1>Prima Paraplyer UF</h1>
 		</header>
-		<!--Top menu-->
+		<!--Navigation bar-->
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">HEM</a></li>
@@ -24,17 +24,8 @@
 		<!--Main content-->
 		<h1>Om oss</h1>
 		<p>Vi är ett UF-företag i Eskilstuna som säljer paraplyer.</p>
-		<div id="owners">
-
-			<!--h3>Lukas Fransson</h3>
-			<h3>Martin Kaup</h3>
-			<ul>
-				<li><img id="LF" src="img/temp.jpg" alt="Lukas Fransson" style="width:200px;height:200px;"></li>
-				<li><img id="MK" src="img/temp.jpg" alt="Martin Kaup" style="width:200px;height:200px;"></li>
-			</ul-->
-			<table>
+			<table id="owners"> <!--Får egentligen inte göra såhär, men inget annat funkar-->
 				<thead>
-					<h2>Ägare</h2>
 				</thead>
 				<tr>
 					<td>
@@ -46,16 +37,18 @@
 				</tr>
 				<tr>
 					<td>
+						<h3 style="margin-top: 0;">Lukas Fransson</h3>
+						<p>Lorem Ipsum Dolor Sit Amet.  Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet.</p>
 					</td>
 					<td>
+						<h3 style="margin-top: 0;">Martin Kaup</h3>
+						<p>Lorem Ipsum Dolor Sit Amet.  Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet.</p>
 					</td>
 				</tr>
-			</div>
+			</table>
 		<footer>
-			<p>Barably UF | 2018</p>
-			<p>
-			Instagram: @primaparaplyer_uf	|	Mail: martin.kaup47@gmail.com
-			</p>		
-            </footer>
+			<p>Instagram: @primaparaplyer_uf	|	Mail: martin.kaup47@gmail.com</p>
+			<p>Prima Paraplyer UF | 2019</p>
+        </footer>
 	</body>
 </html>
