--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Kontakt | Barably </title>
+		<title>Kontakt | Prima Paraplyer</title>
         
 		
 		<link rel="stylesheet" href="main.css">
@@ -10,11 +10,11 @@
 	</head>
 	<body>
 		<header id="header">
-		<img src="img/barably.png" style="width: 175px; height: 175px;">
-		<h1>Barably UF</h1>
-        
+			<img src="img/barably.png" style="width: 175px; height: 175px;">
+			<h1>Prima Paraplyer UF</h1>
 		</header>
         <hr>
+		<!--Navigation bar-->
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">HEM</a></li>
@@ -70,10 +70,8 @@
 		</form>
 		
 		<footer>
-			<p>Barably UF | 2018</p>
-            			<p>
-			Instagram: @primaparaplyer_uf	|	Mail: martin.kaup47@gmail.com
-			</p>
+            <p>Instagram: @primaparaplyer_uf	|	Mail: martin.kaup47@gmail.com</p>
+			<p>Prima Paraplyer UF | 2019</p>
 		</footer>
 	</body>
 </html>
