Updated footer to include Swish-number

--- a/about.html
+++ b/about.html
@@ -47,7 +47,8 @@
 				</tr>
 			</table>
 		<footer>
-			<p>Instagram: @primaparaplyer_uf	|	Mail: martin.kaup47@gmail.com</p>
+			<p>Instagram: @primaparaplyer_uf | Mail: martin.kaup47@gmail.com</p>
+			<p id="swish">Swish: 072-361 91 38</p>
 			<p>Prima Paraplyer UF | 2019</p>
         </footer>
 	</body>
