--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,8 @@
 		</form>
 		
 		<footer>
-            <p>Instagram: @primaparaplyer_uf	|	Mail: martin.kaup47@gmail.com</p>
+            <p>Instagram: @primaparaplyer_uf | Mail: martin.kaup47@gmail.com</p>
+			<p id="swish">Swish: 072-361 91 38</p>
 			<p>Prima Paraplyer UF | 2019</p>
 		</footer>
 	</body>
