--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 		</div>
         
 		<footer>
-			<p>Instagram: @primaparaplyer_uf	|	Mail: martin.kaup47@gmail.com</p>
+			<p>Instagram: @primaparaplyer_uf | Mail: martin.kaup47@gmail.com</p>
+			<p id="swish">Swish: 072-361 91 38</p>
 			<p>Prima Paraplyer UF | 2019</p>
 		</footer>   
 		</div>   
