Removed unneccesary id's

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 		<link rel="icon" type="image/x-icon" href="img/barably.ico">
 	</head>
 	<body>
-		<header id="header">
+		<header>
 			<img src="img/barably.png" style="width: 175px; height: 175px;">
 			<h1>Prima Paraplyer UF</h1>
 		</header>
