--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
 
     <div class="container">
-    <header id="header">
+    <header>
 		<img src="img/barably.png" style="width: 175px; height: 175px;">
 		<h1>Prima Paraplyer UF</h1>
     </header>
@@ -26,12 +26,6 @@
 				<li><a href="about.html">OM OSS</a></li>
 				<li><a href="contact.html">KONTAKT</a></li>
 			</ul>
-		</div>
-		
-		<div class="hero-image">
-			<div class="hero-text">
-				
-		  </div>
 		</div>
 
 		<h2>Våra paraplyer</h2>
